2016-08-14  Aurelien Jarno  <aurelien@aurel32.net>

	Fix for bug #36933: Documentation no longer correctly describes how to
	declare strings for storage in program memory
	* doc/api/pgmspace.dox: Add const keyword to variables in PROGMEM
	section. 

2016-04-04  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	patch #8964: Update tests
	* tests/simulate/math/isinf-01.c: Update test condition as the expected
	value of isinf is non-zero in case of argument is infinite.
	* tests/simulate/math/signbit-01.c: Likewise for signbit function.
	* tests/simulate/math/modf-np.c: Update test to use avr-libc's modf
	function.

2016-04-04  Pitchumani Sivanupandi <pitchumani.s@atmel.com>

	patch #8961: Update test script
	* tests/simulate/runtest.sh (Simulate): Do not generate bin file.
	Change exit address from byte to word address. Update options and add
	timeout parameter when invoking simulavr.
	(Compile): Auto detect multilib and CRT filename. Add device library
	to libraries list.

2016-03-17  Senthil Kumar Selvaraj <senthil_kumar.selvaraj@atmel.com>

	* crt1/gcrt1.S: Weakly define __FUSE_REGION_LENGTH__.

2016-02-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Post-release 2.0.0.

2016-02-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* configure.ac: Release version 2.0.0.

2016-02-08  Joerg Wunsch <j.gnu@uriah.heep.sax.de>

	* include/stdlib.h: Move all documentation from assembly code
	files into the header files, so Doxygen will pick it up.
	* include/string.h: (Dito.)
	* libc/stdlib/atof.S: (Dito.)
	* libc/string/ffs.S: (Dito.)
	* libc/string/ffsl.S: (Dito.)
	* libc/string/ffsll.S: (Dito.)
	* libc/string/memccpy.S: (Dito.)
	* libc/string/memchr.S: (Dito.)
	* libc/string/memcmp.S: (Dito.)
	* libc/string/memcpy.S: (Dito.)
	* libc/string/memmem.S: (Dito.)
	* libc/string/memmove.S: (Dito.)
	* libc/string/memrchr.S: (Dito.)
	* libc/string/memset.S: (Dito.)
	* libc/string/strcasecmp.S: (Dito.)
	* libc/string/strcasestr.S: (Dito.)
	* libc/string/strcat.S: (Dito.)